# agentic-note

./: .gitignore  Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  live-tests.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/agent/src/agents/: distiller.rs  merge_assistant.rs  mod.rs  para_classifier.rs  vault_writer.rs  zettelkasten_linker.rs
crates/agent/src/engine/: condition.rs  context.rs  dag_executor.rs  error_policy.rs  executor.rs  migration.rs  mod.rs  pipeline.rs  scheduler.rs  trigger.rs
crates/agent/src/llm/: anthropic.rs  batch_api.rs  batch_collector.rs  cache.rs  mod.rs  openai.rs
crates/agent/src/plugin/: discovery.rs  manifest.rs  mod.rs  runner.rs  wasm_host.rs  wasm_runner.rs
crates/cas/: Cargo.toml
crates/cas/src/: blob.rs  cas.rs  conflict_policy.rs  diff.rs  hash.rs  lib.rs  merge.rs  restore.rs  semantic_merge.rs  snapshot.rs  tree.rs
crates/cas/tests/: proptest_hash.rs  proptest_merge.proptest-regressions  proptest_merge.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  metrics_handle.rs  metrics_init.rs  output.rs
crates/cli/src/commands/: config.rs  device.rs  init.rs  mcp_cmd.rs  metrics_cmd.rs  mod.rs  note.rs  pipeline.rs  plugin.rs  sync_cmd.rs  vault_registry_cmd.rs
crates/cli/src/mcp/: handlers.rs  mod.rs  tools.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  id.rs  lib.rs  storage.rs  storage_postgres.rs  storage_sqlite.rs  types.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/tests/: encryption_migration.rs  llm_agent_integration.rs  note_lifecycle.rs  p2p_sync_protocol.rs  pipeline_execution.rs  sync_flow.rs
crates/review/: Cargo.toml
crates/review/src/: gate.rs  lib.rs  queue.rs
crates/search/: Cargo.toml
crates/search/src/: background_indexer.rs  embedding.rs  fts.rs  graph.rs  hybrid.rs  lib.rs  model_download.rs  reindex.rs
crates/sync/: Cargo.toml
crates/sync/src/: batch_sync.rs  compression.rs  device_registry.rs  double_ratchet.rs  encryption.rs  identity.rs  iroh_transport.rs  lib.rs  merge_driver.rs  protocol.rs  session_store.rs  transport.rs  vault_registry.rs
crates/sync/tests/: proptest_encryption.rs  proptest_vector_clock.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: fixtures.rs  lib.rs  mock_llm_server.rs  temp_vault.rs
crates/vault/: Cargo.toml
crates/vault/src/: frontmatter.rs  init.rs  lib.rs  markdown.rs  note.rs  para.rs
docs/: code-standards.md  codebase-summary.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
pipelines/: auto-process-inbox.toml
plans/260213-1610-agentic-note-mvp/: phase-01-project-setup-core-types.md  phase-02-vault-and-notes.md  phase-03-cli-interface.md  phase-04-search-and-index.md  phase-05-cas-and-versioning.md  phase-06-p2p-sync.md  phase-07-agentspace-engine.md  phase-08-agents-and-review.md  phase-09-mcp-server.md  plan.md
plans/260213-2325-v02-features/: phase-01-core-types-config.md  phase-02-embeddings-semantic-search.md  phase-03-dag-pipeline-engine.md  phase-04-pipeline-error-recovery.md  phase-05-conflict-auto-resolution.md  phase-06-custom-agent-plugins.md  phase-07-p2p-sync-iroh.md  phase-08-integration-testing.md  plan.md
plans/260214-1500-v03-performance-scaling/: phase-01-core-types-config-extensions.md  phase-02-background-indexing-worker.md  phase-03-delta-sync-compression.md  phase-04-batch-multi-peer-sync.md  phase-05-semantic-conflict-resolution.md  phase-06-pipeline-scheduling.md  phase-07-metrics-observability.md  phase-08-integration-testing.md  plan.md
plans/260214-2002-v040-stability-production-hardening/: phase-20-postgresql-optional-backend.md  phase-21-batch-llm-requests.md  phase-22-prometheus-integration.md  phase-23-end-to-end-encryption.md  phase-24-multi-vault-sync.md  phase-25-plugin-sandboxing-wasm.md  plan.md
plans/260218-1427-v050-quality-polish/: phase-26-forward-secrecy-double-ratchet.md  phase-27-async-batch-llm-api.md  phase-28-comprehensive-test-coverage.md  phase-29-cicd-github-actions.md  phase-30-rustdoc-api-documentation.md  phase-31-bug-fixes-edge-cases-version-bump.md  plan.md
plans/260218-2328-v060-ux-testing-api-stability/: phase-36-integration-tests-llm-p2p.md  plan.md
plans/260316-0356-rename-to-zenon/: phase-01-cargo-toml.md  phase-02-rust-source.md  phase-03-ci-cd.md  phase-04-documentation.md  phase-05-git-remote.md  plan.md
plans/reports/: brainstorm-260213-1552-agentic-note-app.md  code-reviewer-260213-1802-full-workspace-review.md  code-reviewer-260214-0810-v02-implementation-review.md  docs-manager-260213-1802-documentation-completed.md  docs-manager-260213-2317-documentation-update.md  docs-manager-260214-0814-v0.2.0-documentation-update.md  docs-manager-260214-1550-v030-release-documentation.md  fullstack-developer-260213-1750-cas-versioning-crate.md  fullstack-developer-260213-1751-agent-engine.md  fullstack-developer-260213-1756-phase-07-llm-agents-review-queue.md  fullstack-developer-260213-1757-mcp-server-phase08.md  fullstack-developer-260214-0741-phase5-conflict-auto-resolution.md  fullstack-developer-260214-0753-phase-04-pipeline-error-recovery.md  fullstack-developer-260214-0753-phase-07-p2p-sync-iroh.md  fullstack-developer-260214-1536-background-indexing-worker.md  fullstack-developer-260214-1537-phase5-semantic-conflict-resolution.md  fullstack-developer-260214-1538-phase-07-metrics-observability.md  fullstack-developer-260214-2030-batch-llm-requests.md  fullstack-developer-260218-1457-phase-26-27-29-implementation.md  project-manager-260214-0814-v02-completion.md  project-manager-260214-1549-v03-performance-scaling-completion.md  project-manager-260316-0403-rename-to-zenon-completion-sync.md  researcher-260213-1538-obsidian-anytype-p2p-sync.md  researcher-260213-1539-agentic-note-research.md  researcher-260213-1539-cross-platform-core-library.md  researcher-260213-1539-pkm-methods-ai-automation.md  researcher-260213-1550-agentic-architecture-patterns.md  (+3 more)
scripts/: coverage.sh  package-release.sh
(+10 files in other folders)
