[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/vault",
    "crates/cas",
    "crates/search",
    "crates/agent",
    "crates/review",
    "crates/cli",
    "crates/sync",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1.1", features = ["serde"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
sha2 = "0.10"
serde_yaml = "0.9"
pulldown-cmark = "0.12"
slug = "0.1"
walkdir = "2"
regex = "1"
tantivy = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
petgraph = "0.8"
ort = "2.0.0-rc.11"
indicatif = "0.17"
iroh = "0.96"
iroh-blobs = "0.98"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
dirs = "6"
tempfile = "3"

agentic-note-core = { path = "crates/core" }
agentic-note-vault = { path = "crates/vault" }
agentic-note-cas = { path = "crates/cas" }
agentic-note-search = { path = "crates/search" }
agentic-note-agent = { path = "crates/agent" }
agentic-note-review = { path = "crates/review" }
agentic-note-sync = { path = "crates/sync" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
