[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/vault",
    "crates/cas",
    "crates/search",
    "crates/agent",
    "crates/review",
    "crates/cli",
    "crates/sync",
    "crates/test-utils",
    "crates/integration-tests",
]

[workspace.package]
version = "0.5.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
notify-debouncer-full = "0.4"
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1.1", features = ["serde"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
sha2 = "0.10"
serde_yaml = "0.9"
pulldown-cmark = "0.12"
slug = "0.1"
walkdir = "2"
regex = "1"
tantivy = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
petgraph = "0.8"
ort = "2.0.0-rc.11"
indicatif = "0.17"
iroh = "0.96"
iroh-blobs = "0.98"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
rand_core = "0.4"
rand_os = "0.1"
dirs = "6"
tempfile = "3"
zstd = "0.13"
diffy = "0.4"
metrics = "0.24"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "any"] }
prometheus-client = "0.23"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
wasmtime = "28"
hyper = { version = "1", features = ["server", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
futures = "0.3"
hkdf = "0.12"
bincode = "1"
ksi-double-ratchet = "0.1"
async-openai = "0.27"
tokio-retry = "0.3"
proptest = "1"

zenon-core = { path = "crates/core", version = "0.5.0" }
zenon-vault = { path = "crates/vault", version = "0.5.0" }
zenon-cas = { path = "crates/cas", version = "0.5.0" }
zenon-search = { path = "crates/search", version = "0.5.0" }
zenon-agent = { path = "crates/agent", version = "0.5.0" }
zenon-review = { path = "crates/review", version = "0.5.0" }
zenon-sync = { path = "crates/sync", version = "0.5.0" }
zenon-cli = { path = "crates/cli", version = "0.5.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
