[package]
name = "agentic-note-agent"
version = "0.4.0"
edition = "2021"

[dependencies]
agentic-note-core = { workspace = true }
agentic-note-vault = { workspace = true }
agentic-note-search = { workspace = true }
agentic-note-review = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
petgraph = { workspace = true }
metrics = { workspace = true }
notify-debouncer-full = { workspace = true }
tokio-util = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }
chrono = { workspace = true }
