[package]
name = "zenon-agent"
version = "0.5.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
zenon-core = { workspace = true }
zenon-vault = { workspace = true }
zenon-search = { workspace = true }
zenon-review = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
petgraph = { workspace = true }
metrics = { workspace = true }
notify-debouncer-full = { workspace = true }
tokio-util = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
wasmtime = { workspace = true }
tokio-retry = { workspace = true, optional = true }

[features]
batch-api = ["async-openai", "tokio-retry"]

[dependencies.async-openai]
workspace = true
optional = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }
chrono = { workspace = true }
zenon-test-utils = { path = "../test-utils" }
