[package]
name = "agentic-note-cas"
version = "0.2.0"
edition = "2021"

[dependencies]
agentic-note-core = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
diffy = { workspace = true }
