[package]
name = "agentic-note-cas"
version = "0.5.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
agentic-note-core = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
diffy = { workspace = true }

[dev-dependencies]
agentic-note-test-utils = { path = "../test-utils" }
proptest = { workspace = true }
tempfile = "3"
