[package]
name = "agentic-note-cli"
version = "0.5.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "agentic-note"
path = "src/main.rs"

[dependencies]
agentic-note-core = { workspace = true }
agentic-note-vault = { workspace = true }
agentic-note-search = { workspace = true }
agentic-note-agent = { workspace = true }
agentic-note-sync = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
prometheus-client = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }

[features]
embeddings = ["agentic-note-search/embeddings"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("embeddings"))'] }

[dev-dependencies]
agentic-note-test-utils = { path = "../test-utils" }
