[package]
name = "zenon-cli"
version = "0.5.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "zenon"
path = "src/main.rs"

[dependencies]
zenon-core = { workspace = true }
zenon-vault = { workspace = true }
zenon-search = { workspace = true }
zenon-agent = { workspace = true }
zenon-sync = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
prometheus-client = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }

[features]
embeddings = ["zenon-search/embeddings"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("embeddings"))'] }

[dev-dependencies]
zenon-test-utils = { path = "../test-utils" }
