[package]
name = "agentic-note-core"
version = "0.2.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
