[package]
name = "agentic-note-core"
version = "0.4.0"
edition = "2021"

[features]
postgres = ["sqlx/postgres"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, optional = true }
