[package]
name = "zenon-core"
version = "0.5.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
postgres = ["sqlx/postgres"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
zenon-test-utils = { path = "../test-utils" }
