[package]
name = "agentic-note-integration-tests"
version = "0.5.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
agentic-note-core = { workspace = true }
agentic-note-vault = { workspace = true }
agentic-note-cas = { workspace = true }
agentic-note-search = { workspace = true }
agentic-note-agent = { workspace = true }
agentic-note-review = { workspace = true }
agentic-note-sync = { workspace = true }
agentic-note-cli = { workspace = true }
agentic-note-test-utils = { path = "../test-utils" }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
