[package]
name = "zenon-integration-tests"
version = "0.5.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
live-tests = []

[dependencies]
zenon-core = { workspace = true }
zenon-vault = { workspace = true }
zenon-cas = { workspace = true }
zenon-search = { workspace = true }
zenon-agent = { workspace = true }
zenon-review = { workspace = true }
zenon-sync = { workspace = true }
zenon-cli = { workspace = true }
zenon-test-utils = { path = "../test-utils" }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
