[package]
name = "agentic-note-review"
version = "0.1.0"
edition = "2021"

[dependencies]
agentic-note-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = "3"
