[package]
name = "agentic-note-search"
version = "0.2.0"
edition = "2021"

[features]
embeddings = ["ort", "indicatif", "dirs", "reqwest", "sha2"]

[dependencies]
agentic-note-core = { workspace = true }
agentic-note-vault = { workspace = true }
tantivy = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
notify-debouncer-full = { workspace = true }
metrics = { workspace = true }

# Embeddings feature deps (optional)
ort = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
