[package]
name = "agentic-note-sync"
version = "0.5.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
agentic-note-core = { workspace = true }
agentic-note-cas = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
iroh = { workspace = true }
dirs = { workspace = true }
zstd = { workspace = true }
metrics = { workspace = true }
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
toml = { workspace = true }
ksi-double-ratchet = { workspace = true }
rusqlite = { workspace = true }
bincode = { workspace = true }
rand_core = { workspace = true }
rand_os = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
agentic-note-test-utils = { path = "../test-utils" }
proptest = { workspace = true }
