[package]
name = "agentic-note-test-utils"
version = "0.5.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
agentic-note-core = { workspace = true }
agentic-note-vault = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["net", "io-util", "rt", "sync"] }
