[package]
name = "agentic-note-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
agentic-note-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
pulldown-cmark = { workspace = true }
slug = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
