[package]
name = "zenon-vault"
version = "0.5.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
zenon-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
pulldown-cmark = { workspace = true }
slug = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
zenon-test-utils = { path = "../test-utils" }
